--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="row ">
                     <div class="col-lg-9 col-md-9 head-text">
                         <h1>SAM CANOE</h1>
-                        <h4>Tournament Angler</h4>
+                            <h4>Tournament Angler</h4>
                            
                             <a href="http://www.p-line.com"><img src="assets/img/p-line.png" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;"></a>
                         
@@ -340,9 +340,9 @@
             </div>
             <div class="row ">
                 <div class="col-lg-7 col-lg-offset-2  col-md-7 col-md-offset-2">
-                    <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.4s">
+                    <div class="embed-responsive embed-responsive-4by3">
                         <!--<iframe src="http://player.vimeo.com/video/18312392" class="vedio-style wow rotateIn animated" data-wow-delay="0.4s"></iframe>-->
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/kJJPIKOPGUI?list=UUUcznNU7j9tUrpcx-ayJ_xA" frameborder="0" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kJJPIKOPGUI?list=UUUcznNU7j9tUrpcx-ayJ_xA" allowfullscreen></iframe>
                     </div> 
                  </div>   
                 <div class="col-lg-4 col-md-4 col-sm-4 ">
