--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
             </div>
             <div class="row ">
                 <div class="col-lg-7 col-lg-offset-2  col-md-7 col-md-offset-2">
-                    <div class="embed-responsive embed-responsive-4by3">
+                    <div class="embed-responsive embed-responsive-16by9">
                         <!--<iframe src="http://player.vimeo.com/video/18312392" class="vedio-style wow rotateIn animated" data-wow-delay="0.4s"></iframe>-->
-                        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kJJPIKOPGUI?list=UUUcznNU7j9tUrpcx-ayJ_xA" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" width="auto" height="315" src="https://www.youtube.com/embed/kJJPIKOPGUI?list=UUUcznNU7j9tUrpcx-ayJ_xA" allowfullscreen></iframe>
                     </div> 
                  </div>   
                 <div class="col-lg-4 col-md-4 col-sm-4 ">
@@ -438,7 +438,7 @@
                 <div class="row text-center">
                     <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                         <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>SPONSORS</strong></h2>
-                        <p class="sub-head">Checkout this vedio , which will let you know how you can help us to save the earth and let the earth live long peacefully. </p>
+                        <p class="sub-head">Checkout this video , which will let you know how you can help us to save the earth and let the earth live long peacefully. </p>
                     </div>
                 </div>
                 <div class="row ">
@@ -455,7 +455,7 @@
                                 <i class="fa fa-star-o fa-4x  "></i>
                             </div>
                             <div class="media-body">
-                                <h3 class="media-heading">Watch This Vedio</h3>
+                                <h3 class="media-heading">Watch This Video</h3>
                                 <p>
                                     Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. 
                                 Aenean faucibus luctus enim. 
