--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <div class="row text-center">
                     <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                         <h2 data-wow-delay="0.3s" class="wow rollIn animated"><strong>SPONSORS</strong></h2>
-                        <p class="sub-head">Currently, Sam is sponsored by <a href="http://cajuntacklehouse.webs.com">Cajun Tackle House</a>, <a href="www.denalirods.com">Denali Rods</a> and <a href="www.cremelure.com">Creme Lures</a>.</p>
+                        <p class="sub-head">Currently, Sam is sponsored by <a href="http://cajuntacklehouse.webs.com">Cajun Tackle House</a>, <a href="http://www.denalirods.com">Denali Rods</a> and <a href="http://www.cremelure.com">Creme Lures</a>.</p>
 
                     </div>
                 </div>
