--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
 
 
-                        <img src="assets/img/slider/SamWeighIn.png" class="img-responsive " alt="" />
+                        <a href="assets/img/slider/SamWeighIn.png"<img src="assets/img/slider/SamWeighIn.png" class="img-responsive " alt="" />
                         <div class="overlay">
                             <a class="preview  " title="Image Title Here" href="assets/img/slider/SamWeighIn.png"><i class="fa fa-search-plus fa-2x"></i></a>
 
