--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
 
                     <div class="portfolio-item wow rotateIn animated" data-wow-delay="0.7s">
                         
-                        <a href="assets/img/slider/SamWeighIn.png"><img src="assets/img/slider/SamWeighIn.png" class="img-responsive " alt="" />
+                        <a href="assets/img/slider/sam-fish.jpg"><img src="assets/img/slider/sam-fish.jpg" class="img-responsive " alt="" />
                         
                         <div class="overlay">
-                            <a class="preview " title="Image Title Here" href="assets/img/slider/SamWeighIn.png"><i class="fa fa-search-plus fa-2x"></i></a>
+                            <a class="preview " title="Image Title Here" href="assets/img/slider/sam-fish.jpg"><i class="fa fa-search-plus fa-2x"></i></a>
 
                         </div>
                     </div>
