--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 <div class="row text-center">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 sub-head">
                     <h2  data-wow-delay="0.3s" class="wow rollIn animated" ><strong>A little about me </strong></h2>
-                    <p>Sam has over 15 years experience in the fishing industry. Participating in various tournaments through out the Southern US. Last year he placed first at the "Some Tournament Here" in "Some City, State Here" and took first place with the prize being a "Boat Description Here". This year he plans on fishing the Central Opens.  </p>
+                    <p>My name is Sam Canoe, I am 30 years old, I am currently employed with one of Louisiana's largest security companies while I am waiting for the right opportunity to chase my dreams. I recently got married in September to my beautiful wife and I have three wonderful stepchildren. We settled down on top of the hill overlooking an 18 acre pond ,in a little town in Grant Parish,La which has giving me an edge of being able to fish everyday, even if I'm not out fishing a tournament. I was introduced to fishing at a very young age through my dad and stepdad. Our main fishing spot was Toledo Bend, which is the best lake in the country right now in my opinion, ever since then I was hooked. I received my first boat when I turned 16 and I have been fishing for bass recreationally and competitively since then.  </p>
 ```````                
                 </div>
             </div>
